<resources>
    <string name="app_name">Beginner Task Two</string>
    <string name="beginner_level">Beginner Level</string>
    <string name="full_name">Wariboko Ezekiel Peters</string>
    <string name="track">Android Developer</string>
    <string name="bio">I am an entrepreneur, foreign exchange enthusiast, aspiring to be outstanding in android development and programming related activities.</string>
    <string name="button">Click Me!!</string>
    <string name="textview">TextView</string>
    <string name="a_photo_of_zed">a photo of zed</string>
</resources>

